# FDE-Assignment-Research-Mini-Lite

./: .env.example  .gitignore  README.md  TECHNICAL_STATEMENT.md  merge_evals.py  plot_all_evals.py  plot_latencies.py  pyproject.toml  requirements.txt
FDE-Assignment/: README.MD  app.py  requirements.txt
FDE-Assignment/research_mini_lite/: __init__.py  agent.py  evaluation.py  observability.py  queries.json  state.py
FDE-Assignment/research_mini_lite/prompts/: researcher.j2
FDE-Assignment/research_mini_lite/tools/: __init__.py  web_search.py
FDE-Assignment/shallow_agent/: __init__.py
FDE-Assignment/shallow_agent/tools/: __init__.py
FDE-Assignment/static/: chat.html  index.html
assets/: plot_all_evals.py
eval-reports/: 2026-06-09_15-07-31.json  2026-06-09_15-08-40.json  big_eval.json
src/shallow_agent/: __init__.py  agent.py  main.py  state.py
src/shallow_agent/prompts/: researcher.j2
src/shallow_agent/tools/: __init__.py  web_search.py
tests/: test_evaluation.py
