[project]
name = "shallow-agent-test"
version = "0.1.0"
description = "Standalone bounded shallow research agent testbed."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "jinja2>=3.1",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langgraph>=0.2",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
]

[project.scripts]
shallow-agent = "shallow_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shallow_agent"]
