[project]
name = "research-mini-lite"
version = "0.1.0"
description = "Standalone bounded Research Mini Lite agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langgraph>=0.2",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "uvicorn>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["FDE-Assignment/research_mini_lite"]
